# xfce-bluetooth

./: README.md  configure.ac
data/: Makefile.am  bluetooth-devices.ui  bluetooth-preferences.ui  bluetooth.ui  xfce4-bluetooth-agent.desktop.in  xfce4-bluetooth.desktop.in
src/: BluezInterface.vala  Makefile.am  bluetooth.ui  xfce-bluetooth-agent.vala  xfce-bluetooth.vala
